@@ -15,6 +15,8 @@
 - extended `FlowStream` connections by adding the `color` attribute
 - added method `U.set()`
 - added method `U.get()`
+- added `CONF.default_shell {String}`
+- added `SHELL(command, callback, [cwd])` for executing of shell
 
 ========================
 0.0.60
